# donos

./: .dockerignore  Cargo.toml  Dockerfile  donos.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
data/: response_packet.txt
donos-blocklist-loader/: Cargo.toml
donos-blocklist-loader/src/: lib.rs
donos-parser/: Cargo.toml
donos-parser/benches/: decoding.rs  encoding.rs
donos-parser/fuzz/: Cargo.toml
donos-parser/fuzz/fuzz_targets/: parse.rs
donos-parser/src/: buffer.rs  header.rs  lib.rs  packet.rs  question.rs  record.rs
donos-parser/src/buffer/: reader.rs
donos-parser/src/packet/: header.rs  question.rs
donos-proto/: Cargo.toml
donos-proto/benches/: decoding.rs  encoding.rs
donos-proto/fuzz/: Cargo.toml
donos-proto/fuzz/fuzz_targets/: parse.rs
donos-proto/src/: lib.rs
donos-proto/src/buffer/: mod.rs  reader.rs  writer.rs
donos-proto/src/packet/: header.rs  mod.rs  question.rs  record.rs
donos-resolver/: Cargo.toml
donos-resolver/src/: lib.rs  mock.rs  prelude.rs
donos-server/: Cargo.toml
donos-server/src/: lib.rs  prelude.rs  receiver.rs  sender.rs
migrations/: 20230518211200_create-records-table.down.sql  20230518211200_create-records-table.up.sql  20230518222000_create-blocklists-table.down.sql  20230518222000_create-blocklists-table.up.sql  20230518223000_create-blocked-domains-table.down.sql  20230518223000_create-blocked-domains-table.up.sql
src/: buffer.rs  config.rs  lookup.rs  main.rs  packet.rs
src/blocklist/: mod.rs
src/cmd/: blocklist.rs  dns.rs  mod.rs
src/dns/: config.rs  error.rs  handler.rs  mod.rs
src/model/: blocklist.rs  mod.rs  record.rs
src/repository/: blocklist.rs  cache.rs  host.rs  lookup.rs  mod.rs  resolver.rs
src/service/: blocklist.rs  database.rs  lookup.rs  mod.rs
tests/: generate.rs
