[package]
name = "donos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./donos-parser"]

[dependencies]
donos-parser = { path = "./donos-parser" }
sqlx = { version = "0.6", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "sqlite",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "net",
    "rt-multi-thread",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
