[package]
name = "donos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./donos-blocklist-loader", "./donos-parser"]

[dependencies]
donos-blocklist-loader = { path = "./donos-blocklist-loader" }
donos-parser = { path = "./donos-parser" }

clap = { version = "4.2", features = ["derive", "env"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = [
    "migrate",
    "sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "net",
    "rt-multi-thread",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
