[package]
name = "donos"
description = "DNS server that allows you to filter domains using blocklists"
version = "0.1.0"
edition = "2021"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
readme = "readme.md"
keywords = ["dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./donos-blocklist-loader",
    "./donos-proto",
    "./donos-resolver",
    "./donos-server",
]

[features]
default = []
generate = []

[dependencies]
donos-blocklist-loader = { path = "./donos-blocklist-loader" }
donos-proto = { path = "./donos-proto" }
donos-server = { path = "./donos-server" }

async-trait = { version = "0.1" }
clap = { version = "4.2", features = ["derive", "env"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
futures = { version = "0.3" }
moka = { version = "0.11", features = ["future"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = [
    "macros",
    "migrate",
    "sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "net",
    "rt-multi-thread",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }

[dev-dependencies]
similar-asserts = "1.4"
