[package]
name = "donos-blocklist-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
base16ct = { version = "0.2", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "tokio-rustls",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
sha2 = { version = "0.10", default-features = false }
tracing = { version = "0.1", default-features = false }
