[package]
name = "donos-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
fuzzing = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "decoding"
harness = false

[[bench]]
name = "encoding"
harness = false
