[package]
name = "donos-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mock"]
mock = []

[dependencies]
donos-proto = { path = "../donos-proto" }

async-trait = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
